--- a/plugins/core/scenarios/images_dir_to_video/images_dir_to_video.yml
+++ b/plugins/core/scenarios/images_dir_to_video/images_dir_to_video.yml
@@ -18,19 +18,34 @@ form:
     output_path:
       label: "Output path"
       type: "plugins.core.fields.directory"
-      description: "Output path for the video"
+      description: "Output directory"
       required: true
-#    file_name:
-#      type: "plugins.core.fields.string"
-#      description: "Name of the output video file"
-#      default: "output"
-#    frame_duration:
-#      type: "plugins.core.fields.timer"
-#      description: "Duration of each frame in seconds"
-#      default: 5
-#    audio:
-#      type: "plugins.core.fields.file_selector"
-#      description: "Audio file to be added to the video"
-#      configuration:
-#        extensions: [ "mp3", "wav" ]
+    file_name:
+      type: "plugins.core.fields.text"
+      description: "Name of the output video file"
+      default: "output.mp4"
+      label: "Output file name"
+      required: true
+    frame_duration:
+      type: "plugins.core.fields.timer"
+      description: "Duration of each frame in seconds"
+      default: 5
+      label: "Frame duration"
+      required: true
+    audio:
+      label: "Background audio"
+      type: "plugins.core.fields.media_selector"
+      description: "Audio file to be added to the video"
+      required: false
+      configuration:
+        extensions: [ "mp3", "wav" ]
+    title:
+      label: "Title"
+      type: "plugins.core.fields.text"
+      description: "Title will be shown on first frame in [center,top]"
+      required: false
 script: "plugins.core.scenarios.images_dir_to_video.images_dir_to_video"
+description: |
+  This scenario will convert images from a directory to a video. 
+  You can set the resolution, fps, output path, output file name, frame duration, and background audio. 
+  You can also add a title to the video.
