--- a/example/template.yml
+++ b/example/template.yml
@@ -2,13 +2,11 @@ templates:
   effects:
     example:
       - type: "plugins.core.effects.blocks.text.write"
-        time:
-          duration: 4
+        time: { duration: 4 }
+
       - type: "plugins.core.effects.blocks.text.background"
-        time:
-          duration: 5
-        configuration:
-          color: [ 255, 255, 255 ]
+        time: { duration: 5 }
+        configuration: { color: [ 255, 255, 255 ] }
+
       - type: "plugins.core.effects.blocks.text.fadein"
-        time:
-          duration: 1
+        time: { duration: 1 }
